improve introScreen UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_fonts: ^3.0.1
+  flutter_svg: ^1.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
