--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   page_transition: ^2.0.5
   delayed_display: ^2.0.0
   shimmer: ^2.0.0
+  badges: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
