--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   delayed_display: ^2.0.0
   shimmer: ^2.0.0
   badges: ^2.0.2
+  flutter_bounce: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
