add bottomNavBar to the project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shimmer: ^2.0.0
   badges: ^2.0.2
   flutter_bounce: ^1.1.0
+  persistent_bottom_nav_bar: ^4.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
